@@ -2,6 +2,9 @@
   Changes with Apache Traffic Server 3.3.3
 
 
+  *) [TS-1811] Make the HostDB sizes variable on the SRV enabled config.
+   This restores compatibility with HostDB's prior to v3.3.1.
+
   *) [TS-1843] Detect and link libhwloc on Ubuntu.
 
   *) [TS-1858] Fix redefinition of timersub on Solaris.
